# atlas-dcat

./: .env.development  .gitignore  Dockerfile  README.md  docker-compose.yaml  noxfile.py  openapi.py  openapi.yml  pyproject.toml
.github/workflows/: deploy.yaml
deploy-old/base/: deployment-fdk-atlas-dcat-service.yaml  kustomization.yaml  service-fdk-atlas-dcat-service.yaml
deploy/base/: deployment.yaml  kustomization.yaml  service.yaml
deploy/hackathon/: env.yaml  ingress.yaml
fdk_atlas_dcat_service/: __init__.py  app.py  config.py  model.py  service.py
